# LUX-OS

./: Cargo.toml  Xargo.toml  rust-toolchain.toml
.cargo/: config.toml
kernel/init/: main.rs
kernel/process/: mod.rs
src/: lib.rs
tests/: test_process.rs
tools/scripts/: build.sh  run.sh
