[package]
name = "lux-os"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
rand = { version = "0.8", default-features = false }

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"